--- a/requirements.txt
+++ b/requirements.txt
@@ -147,7 +147,7 @@ python-dateutil==2.8.1
 python-editor==1.0.4
 python-json-logger==2.0.1
 python-socks==1.2.4
-pytz==2021.1
+pytz
 pywin32==300
 pywinpty==0.5.7
 PyYAML==5.4.1
