--- a/requirements.txt
+++ b/requirements.txt
@@ -191,8 +191,8 @@ sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.5
 SQLAlchemy==1.4.15
 statsmodels==0.12.2
-streamlit==0.81.1
-streamlit_webrtc==0.20.0
+streamlit
+streamlit_webrtc
 tensorboard==2.5.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.0
