--- a/requirements.txt
+++ b/requirements.txt
@@ -51,7 +51,7 @@ Flask-Compress==1.10.1
 flatbuffers==1.12
 future==0.18.2
 gast==0.4.0
-gdown @ git+https://github.com/giuliano-oliveira/gdown_folder.git@a3fb6565e56b8294994f1faa2534a5a2a31a7b94
+gdown==4.4.0
 geographiclib==1.52
 geopy==2.2.0
 gitdb==4.0.7
